import collapse & action table replaced by list & css fix

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -192,10 +192,6 @@
 	float: right;
 }
 
-.table-striped>tbody>tr:nth-child(odd)>td, .table-striped>tbody>tr:nth-child(odd)>th {
-  background-color: #DDDDDD;
-}
-
 .scenario {
   margin-bottom: 10px;
 }
@@ -252,13 +248,28 @@
 }
 
 
-/* bootstrap overriding */
+/* BEGIN : bootstrap overriding */
 .panel-default {
     border: none !important;
 }
 .panel-body {
     padding: 8px !important;
 }
+
+.table-striped>tbody>tr:nth-child(odd)>td, .table-striped>tbody>tr:nth-child(odd)>th {
+  background-color: #DDDDDD;
+}
+
+.list-striped>li:nth-child(odd), 
+.list-striped>li:nth-child(odd) {
+    background-color: #DDDDDD;
+}
+
+.panel>.list-group .list-group-item, .panel>.panel-collapse>.list-group .list-group-item{
+  margin: 0; /*to override "row" class margin (to avoid horizontal scrollbar)*/
+}
+/* END : bootstrap overriding */
+
 /* webix overriding */
 .webix_tree_item.webix_selected {
     background: #ddd !important;
